Fix image width and alignment in search results

--- a/static/less/search.less
+++ b/static/less/search.less
@@ -59,15 +59,23 @@ body.search {
   padding-top: 20px;
   overflow: hidden;
 
+  h3, .summary, .metadata {
+    // Not all images are the same widget (e.g. oEmbedded ones that have
+    // a more narrow thumbnail.  Make sure the text elements are all
+    // aligned, regardless of image width. 
+    margin-left: 230px;
+  }
+
   h3 { text-align: left !important; }
 
   img {
     float: left;
-    margin-right: 0.5em;
+    // Downsize externally hosted images in the browser.  Locally hosted
+    // images will be correctly resized server-side 
+    max-width: 222px;
   }
 
   .metadata {
-
     dt {
       display: block;
       float: left;
